Actions
Bug #10737
closedprocfs: NULL pointer errors
Start date:
2019-04-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/fs/proc/prvfsops.c:30: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/fs/proc/prvfsops.c:64:2: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'proc_mntopts.mo_count') #define NULL ((void *)0) ^ ../../common/fs/proc/prvfsops.c:64:2: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/fs/proc/prioctl.c: In function 'prioctl32': ../../common/fs/proc/prioctl.c:1867:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] un32.va = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e14d4b22a4af406b3202d81ab8a3a197b796bcd2
commit e14d4b22a4af406b3202d81ab8a3a197b796bcd2 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:09:14.000Z 10737 procfs: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions